# engage-ux

./: .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_PHASE_COMPLETE.md  DOCUMENTATION_REVIEW_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  REVIEW_COMPLETE.md  rustfmt.toml
.analyze/: .rustc_info.json
.analyze/debug/.fingerprint/engage-ux-303af64e2e9acd97/: bin-engage-ux  bin-engage-ux.json
.analyze/debug/.fingerprint/engage-ux-4a317127c4501c4a/: test-bin-engage-ux  test-bin-engage-ux.json
.analyze/debug/.fingerprint/engage-ux-android-4c90e39042244cb4/: test-lib-engage_ux_android  test-lib-engage_ux_android.json
.analyze/debug/.fingerprint/engage-ux-android-87bc1140f243e3ba/: lib-engage_ux_android  lib-engage_ux_android.json
.analyze/debug/.fingerprint/engage-ux-ios-3b58f0401ed078f4/: lib-engage_ux_ios  lib-engage_ux_ios.json
.analyze/debug/.fingerprint/engage-ux-ios-f82c07dbc7e7ee6c/: test-lib-engage_ux_ios  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.yml  copilot-instructions.md
.github/workflows/: ci.yml
docs/: CHANGELOG_DOCS.md  COMPONENT_DOCUMENTATION_COMPLETE.md  DOCUMENTATION_SUMMARY.md  Documentation Changelog.md  Documentation Summary.md  Frequently Asked Questions.md  Gemfile  Quick Reference.md  README.md  Roadmap.md  Troubleshooting.md  WINDOWS_BACKEND_COMPLETE.md  _config.yml  actual-rendering.md  color-formats.md  faq.md  getting-started.md  iOS Backend Implementation.md  implementation-status.md  index.markdown  index.md  layout-system.md  lcars-theme.md  platform-backends.md  quick-reference.md  roadmap.md  troubleshooting.md  windows-backend-implementation.md
docs/api/: index.md
docs/api/core/: accessibility.md  animation.md  color.md  component.md  drag-drop.md  events.md  index.md  input.md  layout.md  prelude.md  reorg.md  types.md
docs/assets/: README.md
docs/components/: accordion.md  avatar.md  badge.md  banner.md  breadcrumb.md  button.md  card.md  carousel.md  checkbox.md  console.md  container.md  date_picker.md  dialog.md  group.md  icon.md  image.md  index.md  label.md  line_numbers.md  link.md  list.md  menu.md  pagination.md  progress.md  radio.md  ruler.md  select.md  slider.md  table.md  tabs.md  text.md  text_area.md  text_editor.md  text_input.md  title_menu.md  toast.md  toggle.md  tooltip.md  video.md  window.md  (+1 more)
docs/design/: IMPLEMENTATION_SUMMARY.md  Protocol.md  Requirements.md  StyleGuide.md  TODO.md
docs/design/agents/: IMPLEMENTATION_SUMMARY.md  Prompt.md  SCREEN_READER_IMPLEMENTATION.md  TECHNOLOGIES.md  TODO.md  feature-issues-checklist.md  project-plan.md
docs/design/architecture/: Android_Backend_Implementation.md  Android_Backend_Quick_Start.md  Color_Scheme.md  Component_Architecture.md  Data_Flow.md  NFRs.md  Quick_Reference.md  README.md  Requirement_1_Core_System.md  Requirement_2_UI_Components.md  Requirement_3_Theme_System.md  Requirement_4_OS_Abstraction.md  System_Architecture.md  Windows Backend.md
docs/examples/: index.md
docs/guides/: accessibility.md  advanced-testing.md  component-development.md  testing.md  theming.md
engage-ux-components/: Cargo.toml
engage-ux-components/examples/: animation_demo.rs  basic_components.rs  custom_input_demo.rs  drag_drop_demo.rs  layout_demo.rs  lcars_theme_demo.rs  theme_demo.rs
engage-ux-components/src/: accordion.rs  avatar.rs  badge.rs  banner.rs  breadcrumb.rs  button.rs  card.rs  carousel.rs  checkbox.rs  console.rs  container.rs  date_picker.rs  dialog.rs  group.rs  icon.rs  image.rs  label.rs  lib.rs  line_numbers.rs  link.rs  list.rs  menu.rs  pagination.rs  progress.rs  radio.rs  ruler.rs  select.rs  slider.rs  table.rs  tabs.rs  text.rs  text_area.rs  text_editor.rs  text_input.rs  title_menu.rs  toast.rs  toggle.rs  tooltip.rs  video.rs  window.rs  (+1 more)
engage-ux-core/: Cargo.toml
engage-ux-core/src/: accessibility.rs  animation.rs  color.rs  component.rs  component_properties.rs  drag_drop.rs  events.rs  input.rs  layout.rs  lib.rs  media.rs  modules.rs  rendering.rs  types.rs
engage-ux-core/src/accessibility/: mod.rs
engage-ux-core/src/input/: keyboard.rs  mod.rs  mouse.rs  touch.rs
engage-ux-core/src/layout/: constraints.rs  mod.rs  position.rs  size.rs  units.rs
engage-ux-core/src/media/: font.rs  image.rs  mod.rs
engage-ux-core/src/modules/: accessibility.rs  animation.rs  color.rs  common.rs  component.rs  drag_drop.rs  events.rs  inner.rs  input.rs  props.rs  rendering.rs
engage-ux-core/src/modules/input/: events.rs  inner.rs  keyboard.rs  mouse.rs  touch.rs
engage-ux-core/src/modules/layout/: constraints.rs  inner.rs  layout.rs
engage-ux-core/src/modules/media/: error.rs  font.rs
engage-ux-core/src/rendering/: error.rs  svg.rs
engage-ux-oal/: Cargo.toml  MACOS_BACKEND.md  MACOS_IMPLEMENTATION_SUMMARY.md
engage-ux-oal/examples/: visual_window_demo.rs  windows_backend_demo.rs
engage-ux-oal/src/: lib.rs  monitor.rs  platform.rs  window.rs
engage-ux-oal/src/backends/: linux_accessibility.rs  mod.rs  renderer.rs  screen_reader.rs  screen_reader_android.rs  screen_reader_ios.rs  screen_reader_linux.rs  screen_reader_macos.rs  screen_reader_windows.rs  softbuffer_renderer.rs  tiny_skia_renderer.rs  window_backend.rs  winit_window.rs
engage-ux-tests/: Cargo.toml  test_accessibility_validation.rs  test_android_backend.rs  test_animation_system.rs  test_custom_input_system.rs  test_drag_drop_system.rs  test_e2e_platform_backends.rs  test_input_system.rs  test_linux_backend.rs  test_macos_backend.rs  test_platform_backends.rs  test_rendering_pipeline.rs  test_screen_reader_integration.rs  test_theme_integration.rs  test_visual_regression.rs
engage-ux-themes/: Cargo.toml
engage-ux-themes/examples/: color_formats.rs  export_themes.rs
engage-ux-themes/src/: lib.rs
hardware/nvidia/: Cargo.toml
network/: Cargo.toml
os/android/: Cargo.toml
os/ios/: Cargo.toml
os/linux/: Cargo.toml
os/macos/: Cargo.toml
os/windows/: Cargo.toml
schemas/: theme.schema.json
themes/: dark.json  lcars-dark.json  lcars-light.json  light.json  simple-dark.json  simple-light.json
(+20 files in other folders)
