[workspace]
resolver = "3"
members = [
  "engage-ux-*",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
description = "A modular UX framework for Rust, providing core functionality, components, and themes."
repository = "https://github.com/JEleniel/engage-ux"
license = " MIT OR Apache-2.0"
keywords = ["components", "framework", "rust", "themes", "ux"]
categories = [
  "development-tools",
  "gui",
  "rust-patterns",
  "visualization",
  "web-programming",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.41", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
fontdue = { version = "0.9" }
usvg = { version = "0.44" }
resvg = { version = "0.44" }
tiny-skia = { version = "0.11" }

[profile.release]
lto = true
