[workspace]
resolver = "3"
members = [
  "engage-ux-*",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
description = "A fully themable, modular UX framework for Rust, providing core functionality, components, and base themes."
repository = "https://github.com/JEleniel/engage-ux"
license = " MIT OR Apache-2.0"
keywords = ["components", "framework", "rust", "themes", "ux"]
categories = [
  "development-tools",
  "gui",
  "rust-patterns",
  "visualization",
  "web-programming",
]

[workspace.dependencies]
bitflags = { version = "2.4" }
chrono = { version = "0.4", features = ["serde"] }
fontdue = { version = "0.9" }
image = { version = "0.25", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
keyboard-types = { version = "0.8", features = ["serde"] }
resvg = { version = "0.44" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2" }
tiny-skia = { version = "0.11" }
tokio = { version = "1.41", features = ["full"] }
usvg = { version = "0.44" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
