[package]
name = "engage-ux-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "UI components for Engage UX"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }
engage-ux-oal = { path = "../engage-ux-oal" }
engage-ux-themes = { path = "../engage-ux-themes" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
