[package]
name = "engage-ux-components"
version.workspace = true
edition.workspace = true
description = "UI components for Engage UX"
repository.workspace = true
license.workspace = true

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }
engage-ux-oal = { path = "../engage-ux-oal" }
engage-ux-themes = { path = "../engage-ux-themes" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
