[package]
name = "engage-ux-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Engage UX - a cross-platform UI toolkit"
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
bitflags = "2.4"
image = { workspace = true }
fontdue = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
