[package]
name = "engage-ux-oal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OS Abstraction Layer for Engage UX - provides cross-platform support"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_os = "ios")'.dependencies]

[dev-dependencies]
