[package]
name = "engage-ux-oal"
version.workspace = true
edition.workspace = true
description = "OS Abstraction Layer for Engage UX - provides cross-platform support"
repository.workspace = true
license.workspace = true

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }

[dev-dependencies]

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[lints.rust]
unsafe_code = "forbid"
