[package]
name = "engage-ux-themes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Theme system for Engage UX with JSON configuration support"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
