[package]
name = "engage-ux-themes"
version.workspace = true
edition.workspace = true
description = "Theme system for Engage UX with JSON configuration support"
repository.workspace = true
license.workspace = true

[dependencies]
engage-ux-core = { path = "../engage-ux-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
