[package]
name = "engage-ux-linux"
description = "Linux OS specific code for Engage UX, an application UI (a.k.a. window) and input/output manager designed around the User Experience first"
license.workspace = true
version.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
